# halo2-circuit-practice-decompose-gadget

./: Cargo.toml  README.md
src/: main.rs  range_check_lookup_2.rs
src/range_check_lookup/: table.rs
src/range_check_lookup_2/: table.rs
